@@ -6,8 +6,10 @@ Changes and improvements to pybars, grouped by release.
 NEXT
 ----
 
-* Fix Compiler.register_helper to actually register the helper
-  such that it will be used. (James Westby, lp:1054550)
+* Remove Compiler.register_helper, in favour of passing
+  helpers when rendering templates (register_helper never
+  worked, so this shouldn't break any code.)
+  (James Westby, lp:1054550)
 
 0.0.3
 -----
